# PAP-BCO_Solver

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docker/: Dockerfile
src/: Algorithm.hpp  Engine.hpp  GraphUtility.hpp  matrix_parser.hpp  matrix_parser.t.hpp  options.hpp  pap-bco_solver.cpp  pap-bco_solver.hpp  spanning_tree.hpp
test/: CMakeLists.txt  test_cutset.cpp  test_engine.cpp
validation/: performance_analysis.m
validation/optimal_model/: .find_solver.sh.swp  ampl.model  ampl.run  create_datafile.py  create_datafile_from_matrix.py  eval.sh
